added text to webpage

--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<html></html>
-More changes
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Project 1</title>
+    </head>
+    <body>
+        <h1>Matthew Tubbs</h1>
+        <p>This is my webpage</p>
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Video Games</li>
+            <li>Watching Movies</li>
+            <li>Sports (Watching and Playing</li>
+            <li>Tabletop Games</li>
+            <li>Reading</li>
+        </ul>
+    </body>
+</html>
